--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>CodePen - HSLA matic</title>
+    <title>HSLA matic</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body onload="cambiacolor()">
     <div id="contenedor">
